--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,11 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
+ACRM_REDIRECT=
+ACRM_ID=
+ACRM_SECRET=
+ACRM_AUTH=
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=local
